src/z80asm/z80asm2/t/20-preproc/expected/undefine_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/undefine_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/undefine_01.asm...
t/20-preproc/input/undefine_01.asm:1:9: error: Expected identifier after UNDEFINE
    undefine ; no name
            ^
t/20-preproc/input/undefine_01.asm:2:16: error: Unexpected token after UNDEFINE: world
    undefine hello world ; extra tokens
                   ^
# file: t/20-preproc/input/undefine_01.asm
EndOfLine	"\n"	3:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
